--- a/gb/22/9/19/n13827897.md
+++ b/gb/22/9/19/n13827897.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【未解之谜】揭秘虚云和尚前世真相 竟然是他</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13830897-1200x800-2-600x400.jpg" />
 <h6>揭秘！中国近代第一高僧虚云和尚前世真相，难怪佛缘如此深远；112岁时神游佛国亲见弥勒，死而复生。（《未解之谜》提供）
 </h6>
 <hr>
-<p>大家好，我是扶摇，欢迎和我一起探索<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>。</p>
-<p>今天我们要和大家分享的是中国近代第一高僧——<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%99%9A%E4%BA%91%E5%92%8C%E5%B0%9A.md#1">虚云和尚</a>的故事。虚云和尚的一生堪称传奇，他经历了清朝道光、咸丰、同治、光绪、宣统五代皇帝，目睹了中国的百年战乱，沧桑巨变。虚云和尚在112岁高龄时曾多次遭遇致命殴打，但是却都奇迹般生还康复，令天不怕地不怕的施暴者都心生敬畏。更难得的是，他还神游佛国，亲眼见到弥勒的尊容。</p>
+<p>大家好，我是扶摇，欢迎和我一起探索未解之谜。</p>
+<p>今天我们要和大家分享的是中国近代第一高僧——虚云和尚的故事。虚云和尚的一生堪称传奇，他经历了清朝道光、咸丰、同治、光绪、宣统五代皇帝，目睹了中国的百年战乱，沧桑巨变。虚云和尚在112岁高龄时曾多次遭遇致命殴打，但是却都奇迹般生还康复，令天不怕地不怕的施暴者都心生敬畏。更难得的是，他还神游佛国，亲眼见到弥勒的尊容。</p>
 <h2>神奇的出生</h2>
-<p>不平凡的人注定会有一个不平凡的出生。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%99%9A%E4%BA%91%E5%92%8C%E5%B0%9A.md#1">虚云和尚</a>俗姓萧，是梁武帝萧衍之后。他的父亲萧玉堂在清朝时期的永春州做官，和夫人颜氏年过四十都没有孩子，十分着急。于是颜氏就去观音寺祈求观音送子。到了晚上，颜氏就做了一梦，梦见一个长须青袍的老者，头顶观音身跨老虎而来，一下跳到床上躺下。早上起来，颜氏将梦告诉丈夫萧玉堂，谁知萧玉堂惊讶地说，他做了同样的梦！看来祈子有望呀。</p>
+<p>不平凡的人注定会有一个不平凡的出生。虚云和尚俗姓萧，是梁武帝萧衍之后。他的父亲萧玉堂在清朝时期的永春州做官，和夫人颜氏年过四十都没有孩子，十分着急。于是颜氏就去观音寺祈求观音送子。到了晚上，颜氏就做了一梦，梦见一个长须青袍的老者，头顶观音身跨老虎而来，一下跳到床上躺下。早上起来，颜氏将梦告诉丈夫萧玉堂，谁知萧玉堂惊讶地说，他做了同样的梦！看来祈子有望呀。</p>
 <p>&nbsp;</p>
 </p>
 <p><center><a title="他留下数不清的舍利子！曾转世文豪、高僧多世修炼，彻悟前世今生！神游佛国，亲眼见弥勒，死而复生。亲见百年战乱巨变，给人展现神通，向军阀施展神迹！| #未解之谜 扶摇" src="https://www.ganjingworld.com/zh-TW/embed/Vl6FU5GMGQMaH" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
@@ -17,13 +17,13 @@
 <p>虚云从小就非常聪明，可是呢他对世间的功名没啥兴趣，反而对佛经非常喜爱，到17岁就曾偷偷出家，不过被家人半路截了回来。</p>
 <p>为了拴住虚云的心，他的父亲决定给他娶亲，而且是一次就娶了两位妻子，田氏和谭氏。虽然无法违抗父亲，但是虚云也没有准备妥协。新婚之夜，他向妻子弘扬佛法，而田氏和谭氏也是颇有慧根之人，当下就能有所领悟，于是他们就如大迦叶与妙贤一样，有夫妻之名，却无夫妻之实，成了清修的净侣。</p>
 <p>一年后，虚云给两位妻子留下“皮袋歌”，指出人身不过一副皮囊，修得正果才是最重要的，之后便在福州鼓山涌泉寺出家。而他的两位妻子之后也相继出家。</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%8F%E4%B8%9C%E5%9D%A1.md#1">苏东坡</a>转世？！</h2>
+<h2>苏东坡转世？！</h2>
 <p>或许因为虚云和尚有着非凡的造诣，又有这段与大迦叶很类似的婚姻经历，所以后来有人猜测虚云和尚是不是大迦叶转世。不过，我们在之前的节目曾介绍了，大迦叶按照释迦牟尼佛的指示，驻世人间等待弥勒，不入轮回，所以虚云和尚应该不是他。</p>
 <p>虚云和尚的弟子净慧长老后来透露，老和尚原来是明朝四大高僧之一憨山大师的转世。这是怎么知道的呢？</p>
 <p>原来，民国二十三年，1934年，虚云和尚重整曹溪祖庭南华寺时，曾在憨山大师肉身像前拈香说偈语：“今德清，古德清，今古相逢换了形。佛法兴衰听时节，入林入草不曾停。”</p>
 <p>憨山大师的法号是德清，虚云老和尚的法号也是德清。生生世世的轮回中，已经换了肉身。现在活生生的“今德清”站在肉身不腐的“古德清”前，真是“今古相逢换了形”。当年憨山大师去南华寺的时候，他还是一个充军之人，以服刑之人的身份去南华寺，把六祖道场振兴起来。现在虚云老和尚又去了南华寺，再次振兴这个道场。真是“佛法兴衰听时节，入林入草不曾停。”</p>
 <p>还有一次，有个人拿着《楞伽经注解》来向虚云和尚请教，谁知老和尚脱口而出：那是我坐水牢的时候写的。可是虚云和尚没坐过水牢啊，倒是憨山大师曾因以私修庙之罪被充军到南海坐过水牢，水牢的水到膝盖以上。憨山大师一天要在水牢中站八个小时，回来以后再写《楞伽经注解》。所以，这又是虚云和尚自己透露了自己的前世。</p>
-<p>而这位憨山大师的来历也不一般。他曾在《梦游集?示灵洲镜上人》文中写道，他曾经在登上海门妙高峰，在禅定中，进入很深广的境界中，看到了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%8F%E4%B8%9C%E5%9D%A1.md#1">苏东坡</a>的过往。后来知道了这是前世留存的信息。之后又游历了苏东坡曾经居住过的地方，读他的诗，感叹万法如梦如幻，人生也如梦中幻化一样。</p>
+<p>而这位憨山大师的来历也不一般。他曾在《梦游集?示灵洲镜上人》文中写道，他曾经在登上海门妙高峰，在禅定中，进入很深广的境界中，看到了苏东坡的过往。后来知道了这是前世留存的信息。之后又游历了苏东坡曾经居住过的地方，读他的诗，感叹万法如梦如幻，人生也如梦中幻化一样。</p>
 <p>所以后人根据憨山大师的自述，才知道原来他是北宋大文豪苏东坡转世。而苏东坡又是五戒和尚转世而来。这样说来，虚云和尚的佛缘深远、根基深厚，自是不必多说了。</p>
 <h2>无法解释的神迹</h2>
 <p>虚云和尚得道开悟之后，在他身上发生了许多神奇的事情，这些用现代科学都是完全解释不了。这里找几个最为经典的事例来和大家分享。</p>
@@ -41,66 +41,55 @@
 <p>不得已，虚云和尚从佛界又返回到了人间。</p>
 <p>弥勒还对虚云和尚有了特别的开示，不过虚云说暂时不能说。</p>
 <p>虚云所展现的神迹，让迫害他的打手们都觉得不可思议。他们问僧人：“为什么老家伙打不死的？”僧人说：“老和尚为众生受苦。为你们消灾。打不死的。久后自知。”这些人当下心生畏惧，不敢再下毒手。后来中共迫害云门寺僧众的事情被外界知晓后，中共对虚云的迫害暂时有所收敛。这件事后来被称为“云门事变”。</p>
-<h2><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%8D%E5%88%A9%E5%AD%90.md#1">舍利子</a>之谜</h2>
+<h2>舍利子之谜</h2>
 <p>虚云和尚的关门弟子绍云和尚在《绍云法师开示录》中介绍了虚云和尚人生最后几年的事。在1956年到1958年间，虚云和尚经常生病发烧，在“云门事变”中受的旧伤、断骨处时常疼痛不已。虚云和尚常常躺在床上呻吟。即便是这样，当有人来拜访时，虚云和尚马上又坐起来，盘上腿，精神好得很，可以和人聊上三四个小时，一点也看不出有病的样子。但是客人一走，他又躺下呻吟起来了。虚云的弟子觉得很奇怪，就请教他这是怎么回事？虚云回答：“这是业障啊。阎王老子也管不了我，我要起来就起来，要不起来就不起来。”</p>
 <p>1958年以后，虚云和尚和弟子说，自己要走了。众弟子很难过，就问他为何要走。虚云说：“你们不知道，以后还有十年的罪，好难受呀！”当时大家都不明白，直到发生文化大革命的十年浩劫，大家才知道虚云和尚早就预知到了这件事。</p>
 <p>到了1959年，虚云和尚显示出的病情开始加重，到3月时早上和中午就吃一小碗粥糜而已。有人为虚云和尚找来医生，但是他都把医生遣走了，说“世缘将尽也”。</p>
-<p>1959年9月12日虚云和尚圆寂了，在此之前的一个多月里，很多僧人都曾经看到有一大片光自茅蓬里出来，朝大殿方向去；只见一明亮光环，不见任何影像，进了大殿，光环才渐渐隐没。9月19日封龛，次日火化，预期三天后开炉拣舍利骨灰。不料，第二天赵州关外山上失火，山上住了近百人，僧人们都去救火，只留下一些老弱病残的人在寺内。其中宽怀和尚和宽克和尚等人跑到化身炉洞外向内窥看，看到虚云老和尚火化后的骨灰兀坐不倒，宛如活人一样跌坐在那里。他们觉得奇怪，便随手拾起一块小瓦片朝那骨灰一丢，骨灰就整个倒下来了。宽怀和尚即伸手向里面抓起一把骨灰，一看有好几颗晶莹光亮的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%8D%E5%88%A9%E5%AD%90.md#1">舍利子</a>，立刻兴奋地喊叫了起来。</p>
+<p>1959年9月12日虚云和尚圆寂了，在此之前的一个多月里，很多僧人都曾经看到有一大片光自茅蓬里出来，朝大殿方向去；只见一明亮光环，不见任何影像，进了大殿，光环才渐渐隐没。9月19日封龛，次日火化，预期三天后开炉拣舍利骨灰。不料，第二天赵州关外山上失火，山上住了近百人，僧人们都去救火，只留下一些老弱病残的人在寺内。其中宽怀和尚和宽克和尚等人跑到化身炉洞外向内窥看，看到虚云老和尚火化后的骨灰兀坐不倒，宛如活人一样跌坐在那里。他们觉得奇怪，便随手拾起一块小瓦片朝那骨灰一丢，骨灰就整个倒下来了。宽怀和尚即伸手向里面抓起一把骨灰，一看有好几颗晶莹光亮的舍利子，立刻兴奋地喊叫了起来。</p>
 <p>过一会儿，救火的人陆续回来，听说虚云和尚的骨灰里有舍利子，纷纷跑来，争着向内抓一把骨灰然后往山中僻静处跑。几十人都是如此，有的一把骨灰里面有好几颗舍利子，少的也有一两颗，大小不等，颜色不一，以白色晶莹者为多。所以虚云和尚的骨灰里有多少舍利子，根本无法统计。</p>
 <p>当时很多人看到虚云和尚盘腿端坐在舍利里面，其中一颗甚至连他那长眉毛也看得清清楚楚。那颗舍利现在还藏在舍利塔里。</p>
 <p>那时有些人想毁谤虚云和尚，就说这些舍利子是放了琥珀进去烧出来的。于是有人就试着把琥珀放进火里面烧，结果都成灰。关于舍利子的真假，我们之前专门做了一期节目介绍，有兴趣的朋友可以去看看。</p>
-<p>好了，今天的分享就到这里。<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9C%AA%E8%A7%A3%E4%B9%8B%E8%B0%9C.md#1">未解之谜</a>，我是扶摇，我们下期见。</p>
+<p>好了，今天的分享就到这里。未解之谜，我是扶摇，我们下期见。</p>
 <p>欢迎订阅Youmaker频道：<ahref="https://www.youmaker.com/c/UnsolvedMystery">https://www.youmaker.com/c/UnsolvedMystery</a><br />
 订阅频道YouTube频道：<ahref="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ">https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ</a><br />
-订阅<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%e6%9c%aa%e8%a7%a3%e4%b9%8b%e8%ac%8e.md#1">未解之谜</a>Telegram群组：<ahref="https://t.me/wjzmchannel">https://t.me/wjzmchannel</a></p>
+订阅<ahref="https://github.com/1992513/djy/blob/master/gb/tag/%e6%9c%aa%e8%a7%a3%e4%b9%8b%e8%ac%8e.md#1">未解之谜</a>Telegram群组：<ahref="https://t.me/wjzmchannel">https://t.me/wjzmchannel</a></p>
 <p>【<ahref="https://www.youtube.com/channel/UCzvQZ1p_-AXgAWiyHhE7CxQ" target="_blank" rel="noopener noreferrer">未解之谜</a>】节目组制作</p>
 <p>责任编辑：李梅#</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/22/n13807345.md#1">【未解之谜】不存在的网红餐厅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/25/n13810313.md#1">【未解之谜】太平洋文明之谜 姆大陆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/2/n13815759.md#1">【未解之谜】埃及女祭司3000年灵魂之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/5/n13817371.md#1">【未解之谜】不会腐烂的苹果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/8/n13820368.md#1">【未解之谜】老鼠乌托邦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/12/n13822828.md#1">【未解之谜】科学无解的西藏传承</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/16/n13826595.md#1">【未解之谜】英预言家曝惊人预言 和赊刀人不谋而合</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957926.md#1">【未解之谜】科学证明 轮回真的存在？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938144.md#1">有前世记忆作家：我在母亲怀孕4个月时投胎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/22/n13807345.md#1">【未解之谜】不存在的网红餐厅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/25/n13810313.md#1">【未解之谜】太平洋文明之谜 姆大陆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/2/n13815759.md#1">【未解之谜】埃及女祭司3000年灵魂之旅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/5/n13817371.md#1">【未解之谜】不会腐烂的苹果</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/8/n13820368.md#1">【未解之谜】老鼠乌托邦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/12/n13822828.md#1">【未解之谜】科学无解的西藏传承</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/16/n13826595.md#1">【未解之谜】英预言家曝惊人预言 和赊刀人不谋而合</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279001.md#1">【未解之谜】怪谈和尚：世界面临大重启 2024-2029很关键？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274439.md#1">【未解之谜】二战上校转世 他的话救了今生的父亲</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9839893.md#1" target="_blank">郭婉莹——被遗忘的“上海公主”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/17/n11874645.md#1" target="_blank">王友群：习近平的父亲被栽赃陷害16年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/6/n10834201.md#1" target="_blank">这些原中共基层官员对李洪志大师的感恩</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961143.md#1">清明不扫墓？ 古人在清明节从事什么活动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962721.md#1">【探索时分】三大动作 日本为支援台湾做准备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964912.md#1">【晚间新闻】中共强推第4针？ 拒者禁出门甚至收押</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964926.md#1">【全球新闻】不惧中共 麦卡锡将率两党议员见蔡英文</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962245.md#1">九种最好的Costco商品 可在家随时备货</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963848.md#1">马英九在湖南称两岸都是中华民国 中共封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961165.md#1">F-22令歼-20难敌 为何只有美空军可操作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963961.md#1">首度分享育儿日常 孙艺真自曝春天最忧心事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964562.md#1">1年痛失3至亲 大陆歌手刘维：户口本上只有我了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964701.md#1">机场劝架被吼“闭嘴” 秦岚高EQ举动获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964646.md#1">张艾嘉宣传电影一句话 泄露与周润发好交情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961054.md#1">有糖尿病也可放心吃！4种零食控血糖又解馋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959660.md#1">吃杏仁减重有4诀窍 还防糖尿病、心脏病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964375.md#1">你饭后经常胀气吗？ 哈佛医生教你如何缓解</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964240.md#1">马斯克担忧 商业房地产引发债务危机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285360.md#1">【菁英论坛】固本培元下猛药 李强和习不同调</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284762.md#1">【新闻五人行】北京侵台“彩排”苦了这国！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/19/n13827897.htm">【未解之谜】揭秘虚云和尚前世真相 竟然是他</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/9/19/n13827897.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/22/9/19/n13827897.htm">【未解之谜】揭秘虚云和尚前世真相 竟然是他</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/9/19/n13827897.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
